apps/deepdream/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-queue
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream-queue
    spec:
      containers:
        - image: rabbitmq:latest
          imagePullPolicy: Always
          name: deepdream-queue
          livenessProbe:
            exec:
              command:
                - "rabbitmq-diagnostics"
                - "-q"
                - "ping"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "50m"
              memory: "150Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream
    spec:
      containers:
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-api
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-worker
          livenessProbe:
            exec:
              command:
                - "celery"
                - "-A"
                - "tasks"
                - "status"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          command: ["celery", "-A", "tasks", "worker", "--loglevel=INFO", "--concurrency=1"]
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
      volumes:
        - name: deepdream-inputs
          emptyDir: {}
        - name: deepdream-outputs
          emptyDir: {}
