apps/deepdream/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdream-queue
spec:
  ports:
    - port: 5672
  selector:
    app: deepdream-queue
