apps/deepdream/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdream-queue
spec:
  ports:
    - port: 5672
  selector:
    app: rabbitmq
    component: deepdream
---
apiVersion: v1
kind: Service
metadata:
  name: deepdream
spec:
  ports:
    - port: 8000
  selector:
    app: deepdream
    component: deepdream
