apps/deepdream/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdream
spec:
  ports:
    - port: 8000
  selector:
    app: deepdream
