apps/deepdream/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdream
spec:
  ports:
    - port: 8000
  selector:
    app: deepdream
---
apiVersion: v1
kind: Service
metadata:
  name: deepdream-queue
spec:
  ports:
    - port: 5672
  selector:
    app: deepdream-queue
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deepdream
  annotations:
    nginx.ingress.kubernetes.io/app-root: /upload
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: deepdream-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Deepdream Service"
spec:
  tls:
    - hosts:
      - deepdream.hubbe.club  
  rules:
    - host: deepdream.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: deepdream
              servicePort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream
    spec:
      containers:
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-api
          resources:
            requests:
              cpu: "50m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-worker
          command: ["celery", "-A", "tasks", "worker", "--loglevel=INFO", "--concurrency=1"]
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
      volumes:
        - name: deepdream-inputs
          emptyDir: {}
        - name: deepdream-outputs
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-queue
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream-queue
    spec:
      containers:
        - image: rabbitmq:latest
          imagePullPolicy: Always
          name: deepdream-queue
          resources:
            requests:
              cpu: "50m"
              memory: "150Mi"
